Initial pass on flexbox (just fixing overlap), light text styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -112,9 +112,13 @@ header label {
   background-color: darkgreen;
   color: #ddd;
   flex-flow: wrap column;
-  align-items: flex-start;
+  align-items: stretch;
   display: flex;
   flex: 1;
+}
+/* TODO: Why flex-start then stretch? Was this from the template? */
+.contact-info {
+  align-items: stretch;
 }
 
 .contact-info-row {
@@ -126,16 +130,24 @@ header label {
   width: 3em;
 }
 
+.contact-info-icon:hover {
+  color: blue;
+}
+
+
+
+/* Flexbox classes and related layout */
 .flexcontainer {
   display: flex;
+  margin-top: 2rem;
 }
 
-.spaceapart {
+.flexcols {
+  flex-direction: column;
+}
+
+.spacearound {
   justify-content: space-around;
-}
-
-h3 {
-  display: block;
 }
 
 .flexcontainer > div:first-child {
@@ -146,8 +158,15 @@ h3 {
   flex: 1;
 }
 
-.contact-info-icon:hover {
-  color: blue;
+h3 {
+  display: block;
+}
+
+
+/* Main resume content, text and non-layout */
+time {
+  vertical-align: middle;
+  text-align: inherit;
 }
 
 .main-content > div {
@@ -173,8 +192,8 @@ h3 {
   margin-top: 0.5em;
 }
 
-.contact-info {
-  align-items: stretch;
+.heading__relevantprojects {
+  margin-top: 2rem;
 }
 
 .App {
